--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx3G
 
 # Minecraft
-minecraft_version=1.18.1
+minecraft_version=22w03a
 geckolib_core_version=1.0.4a
 
 # Fabric
-yarn_mappings=1.18.1+build.1
-loader_version=0.12.9
-fabric_version=0.44.0+1.18
+yarn_mappings=22w03a+build.3
+loader_version=0.12.12
+fabric_version=0.46.2+1.18
 
 # Mod Properties
 mod_version=3.0.27
